# c-lox

./: CMakeLists.txt  CMakePresets.json  README.md  deb.sh  rel.sh  test.clox  test.cloxasm  test2.clox  vcpkg.json
c-lox/: CMakeLists.txt  main.c
c-lox-asm/: CMakeLists.txt  README.md
c-lox-asm/src/: asm_lexer.c  asm_lexer.h  main.c
c-lox/include/: bytecode_chunk.h  compiler.h  file_io.h  lexer.h  memory.h  value.h
c-lox/src/: bytecode_chunk.c  bytecode_chunk.h  clox_object.c  clox_object.h  clox_value.c  clox_value.h  common.c  common.h  compiler.c  compiler.h  disassembler.c  disassembler.h  file_io.c  hash_table.c  hash_table.h  identifier_cache.c  identifier_cache.h  lexer.c  lexer.h  main.c  memory.c  memory.h  object.c  object.h  std_library.c  std_library.h  utility.c  utility.h  value.c  value.h  virtual_machine.c  virtual_machine.h
tests/: test1.clox  test2.clox  test3.clox  test4.clox
tests/function/: body_must_be_block.lox  empty_body.lox  extra_arguments.lox  local_mutual_recursion.lox  local_recursion.lox  missing_arguments.lox  missing_comma_in_parameters.lox  mutual_recursion.lox  nested_call_with_arguments.lox  parameters.lox  print.lox  recursion.lox  too_many_arguments.lox  too_many_parameters.lox
tests/other/: test2.clox  test3.clox
